--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=backend
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DATN_WEBSITE_NEW;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=1234
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-image.upload.dir=src/main/resources/static
+image.upload.dir=${IMAGE_UPLOAD_DIR:src/main/resources/static}
